# bfs-sycl-fpga

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/1cu/: CMakeLists.txt  GraphProcessing.cpp
benchmarks/2cu/: CMakeLists.txt  GraphProcessing.cpp  GraphProcessing.h
benchmarks/3cu/: CMakeLists.txt  GraphProcessing.cpp
benchmarks/4cu/: CMakeLists.txt  GraphProcessing.cpp
benchmarks/8cu/: CMakeLists.txt  GraphProcessing.cpp  GraphProcessing.h
bfs_1cu/src/: run_bfs_cpu.hpp  run_bfs_fpga.hpp
bfs_2cu/src/: run_bfs_fpga.hpp
bfs_3cu/src/: CMakeLists.txt  host.cpp  run_bfs_cpu.hpp  run_bfs_fpga.hpp
bfs_4cu/: CMakeLists.txt
bfs_4cu/src/: functions.hpp  graph_load.hpp  host.cpp  run_bfs_cpu.hpp  run_bfs_fpga.hpp
include/: exception_handler.hpp
memoryBFS/src/: CMakeLists.txt  functions.hpp  graph_load.hpp  host.cpp  run_bfs_fpga.hpp
scripts/: genGraph.py  generator.py  rootNodes.py
src/: functions.hpp  graph_load.hpp  host.cpp  run_bfs_fpga.hpp
src/modules/: bfs.hpp  bfs_1cu.hpp  bfs_2cu.hpp  bfs_3cu.hpp  bfs_4cu.hpp  bfs_8cu.hpp
streamingBFS/include/: ShannonIterator.hpp  StreamingData.hpp  Unroller.hpp  compute_units.hpp  constexpr_math.hpp  data_bundle.hpp  shift_reg.hpp
streamingBFS/src/: CMakeLists.txt  functions.hpp  host.cpp  run_bfs_cpu.hpp  run_bfs_fpga.hpp
